--- a/index.html
+++ b/index.html
@@ -1,57 +1,85 @@
 <!DOCTYPE html>
 
-<html>
-    <head>
+<html lang="pt-br">
 
-        <title>Home</title>
-        <meta charset="utf-8">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home</title>
+    <link type="text/css" href="_css/style.css" rel="StyleSheet" />
+</head>
 
-    </head>
+<body>
+    <div id="container">
+        <div id="banner">
+            <a href="index.html"><img src="imagens/banner.jpg" id="banner-dimensao"></a>
+        </div>
+        <div id="link">
+            <ul id="formatacao-links">
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <li><a href="como.html">Como doar sangue?</a></li>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <li><a href="requisitos.html">Requisitos para doação</a></li>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <li><a href="cadastro.html">Cadastra-se</a></li>
+        </div>
+        <div id="texto">
+            <h1>Doe Sangue!</h1>
+            <br>
+            <p>Você sabe quantas gotas de sangue são necessárias para te manter vivo?
+                <br> A mesma quantidade para salvar uma
+                vida!
+                Você não pode dar tudo o que tem para salvar alguém, mas pode ajudar a completar o que falta.
+            </p>
+            <br>
+            Seja a gota que faltava.
+        </div>
+        <div id="video1">
+            <iframe id="videos" src="https://www.youtube.com/embed/97Sx0KiExZM" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div id="video2">
+            <iframe id="videos" src="https://www.youtube.com/embed/_NlNFbhg6Ys" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div id="video3">
+            <iframe id="videos" src="https://www.youtube.com/embed/wDjm8TAKqys" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div id="video4">
+            <iframe id="videos" src="https://www.youtube.com/embed/T6UXf8xFFUk" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <br>
+        <br>
+        <br>
 
-    <body>
-
-    <header> 
-        <nav>
-            <a href="index.html">Menu</a>
-            <a href="">Destaque</a>
-            <a href="">Novidades</a>
-            <a href="">Galeria</a>
-            <a href="login.html">Login</a>
-        </nav>
-    </header> 
-    <br>
-    <br>
-    <br>
-    <br>
-
-    <div>
-        <img src="imagens/arcade.jpeg" width="100%" height="500px">
+        <footer>
+            Todos os direitos reservados
+        </footer>
     </div>
 
-    <section>
-
-        <h1>Games Mania</h1>
-        <p>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nunc metus, malesuada id lacus nec, mollis ultrices nunc. Donec non malesuada sem. Ut dignissim, mi non blandit gravida, quam lectus pellentesque est, vel tristique eros metus at arcu. Etiam facilisis turpis sed neque fermentum, nec varius tortor suscipit.
-        </p>
-        <article>
-            <h2>Lorem ipsum</h2>
-                <p>dolor sit amet, consectetur adipiscing elit.</p>
-        </article>
-
-    </section>
-
-    <br>
-    <hr>
-    <br>
-
-    <footer>
-        Author: Fabrício Gomes
-        <br>
-        Abril de 2022
-    </footer>        
-
-
-    </body>
+</body>
 
 </html>
