--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link type="text/css" href="_css/style.css" rel="StyleSheet" />
+    <link type="text/css" href="-css/style.css" rel="StyleSheet" />
 </head>
 
-<body>
+<body id="fonte">
     <div id="container">
         <div id="banner">
             <a href="index.html"><img src="imagens/banner.jpg" id="banner-dimensao"></a>
         </div>
         <div id="link">
-            <ul id="formatacao-links">
+            <ul id="formatacao-links" class="listanaoordenada">
+                <br>
+                <br>
+                <li><a href="index.html">Home</a></li>
                 <br>
                 <br>
                 <br>
                 <br>
                 <br>
-                <li><a href="como.html">Como doar sangue?</a></li>
+                <li><a href="como-doar-sangue.html">Como doar sangue?</a></li>
                 <br>
                 <br>
                 <br>
@@ -34,39 +37,39 @@
                 <br>
                 <br>
                 <br>
-                <li><a href="cadastro.html">Cadastra-se</a></li>
+                <li><a href="cadastro.html">Cadastre-se</a></li>
         </div>
         <div id="texto">
-            <h1>Doe Sangue!</h1>
+            <h1 id="atencao">Doe Sangue!</h1>
             <br>
-            <p>Você sabe quantas gotas de sangue são necessárias para te manter vivo?
+            <p id="fonte">Você sabe quantas gotas de sangue são necessárias para te manter vivo?
                 <br> A mesma quantidade para salvar uma
                 vida!
                 Você não pode dar tudo o que tem para salvar alguém, mas pode ajudar a completar o que falta.
             </p>
             <br>
-            Seja a gota que faltava.
+            <span>Seja a gota que faltava.</span>
         </div>
         <div id="video1">
-            <iframe id="videos" src="https://www.youtube.com/embed/97Sx0KiExZM" title="YouTube video player"
+            <iframe class="videos" src="https://www.youtube.com/embed/97Sx0KiExZM" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
         <div id="video2">
-            <iframe id="videos" src="https://www.youtube.com/embed/_NlNFbhg6Ys" title="YouTube video player"
+            <iframe class="videos" src="https://www.youtube.com/embed/_NlNFbhg6Ys" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
         <div id="video3">
-            <iframe id="videos" src="https://www.youtube.com/embed/wDjm8TAKqys" title="YouTube video player"
+            <iframe class="videos" src="https://www.youtube.com/embed/wDjm8TAKqys" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
         <div id="video4">
-            <iframe id="videos" src="https://www.youtube.com/embed/T6UXf8xFFUk" title="YouTube video player"
+            <iframe class="videos" src="https://www.youtube.com/embed/T6UXf8xFFUk" title="YouTube video player"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
@@ -75,7 +78,7 @@
         <br>
         <br>
 
-        <footer>
+        <footer id="rodapé">
             Todos os direitos reservados
         </footer>
     </div>
